--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>Dan's Weather App</title>
+        <title>Joe's Weather App</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
